# auth_jwt_fastapi

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
api/routes/: auth.py  register.py
db_controller/: db_controller.py
db_schemas/: db_schemas.py
schemas/: schemas.py
utils/: crypt_pwd.py
