[project]
name = "auth-jwt-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "authx>=1.4.1",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "setuptools>=78.0.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]
